# shadow_service

./: CMakeLists.txt  README.md  package.xml
launch/: bringup_with_motorhand.launch  shadow_service.launch
script/: get_joint_limits.py  hand_motion_server.py  open_hand.py  sr_robot_commander.py
srv/: ShadowCommanderSrv.srv
urdf/: ori_shadow_hand.urdf
